--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
       coverpage: true,
       loadSidebar: true,
       subMaxLevel: 3,
-      search: 'auto'
-    }
-  </script>
-  <script>
-    if (typeof navigator.serviceWorker !== 'undefined') {
-      navigator.serviceWorker.register('sw.js')
+      search: {
+      paths: 'auto',
+      placeholder: '搜索...',
+      noData: '没有结果',
+      depth: 6,
+},
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
