upd some settings

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         noData: '没有结果',
         depth: 6,
       },
+	  requestHeaders: {
+        'cache-control': 'no-cache',
+      },
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
